--- a/BasicTools.Client/Pages/Index.razor
+++ b/BasicTools.Client/Pages/Index.razor
@@ -1,10 +1,9 @@
 ﻿@page "/"
 @inject RouteSourceAssemblyProvider RouteSources
-@attribute [PageMetadata(
-Title = "Basic Developer Toolbox, By Developers, For Developers",
-Description = "A basic set of free, online tools to help out software developers. Create Guids, validate and format Json/Yaml documents, and expect more to come.",
-Keywords = "online tool, free, developer tools"
-)]
+
+<Title>Developer Toolbox, By Developers, For Developers</Title>
+<Meta Name="description" Content="A basic set of free, online tools to help out software developers. Create Guids, validate and format Json/Yaml documents, and expect more to come." />
+<Meta Name="keywords" Content="online tool, free, developer tools" />
 
 <MudText Typo="Typo.h2">Basic Developer Toolbox</MudText>
 <MudText Typo="Typo.subtitle1">Your one-stop shop for basic, online developer tools!</MudText>
