--- a/BasicTools.Client/Pages/JsonYaml.razor
+++ b/BasicTools.Client/Pages/JsonYaml.razor
@@ -1,10 +1,9 @@
 ﻿@page "/json-yaml/"
-@attribute [PageMetadata(
-Title = "Json & Yaml Validation and Formatting",
-Description = "A tool for parsing, validating and beautifying json and yaml documents. Can even export to XML.",
-Keywords = "JSON, Yaml, javascript object notation, web based, parser, format, online, tool, free"
-)]
 @attribute [ToolPage("Json & Yaml Tools", "Parse, Validate and Format Json and Yaml documents.", "Icons.Material.Outlined.Grading")]
+
+<Title>Json & Yaml Validation and Formatting</Title>
+<Meta Name="description" Content="A tool for parsing, validating and beautifying json and yaml documents. Can even export to XML." />
+<Meta Name="keywords" Content="JSON, Yaml, javascript object notation, web based, parser, format, online, tool, free" />
 
 <MudText Typo="Typo.h3">Json &amp; Yaml Processing</MudText>
 
